# ndc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust_out
.github/workflows/: ci.yml
crates/cognition/: Cargo.toml
crates/cognition/src/: context.rs  lib.rs  memory.rs  stability.rs  vector.rs
crates/core/: Cargo.toml  config.yaml.example
crates/core/src/: agent.rs  config.rs  intent.rs  lib.rs  memory.rs  task.rs
crates/core/src/ai_agent/: conversation_runner.rs  helpers.rs  mod.rs  orchestrator.rs  prompt_builder.rs  prompts.rs  session.rs  session_store.rs  verifier.rs
crates/core/src/ai_agent/adapters/: mcp_adapter.rs  mod.rs  skill_adapter.rs
crates/core/src/ai_agent/injectors/: invariant.rs  lineage.rs  mod.rs  working_memory.rs
crates/core/src/ai_agent/prompts/: base_system.txt  feedback.txt  tools_description.txt
crates/core/src/llm/: mod.rs  selector.rs  understanding.rs
crates/core/src/llm/decomposition/: lint.rs  mod.rs
crates/core/src/llm/provider/: anthropic.rs  minimax.rs  mod.rs  openai.rs  openrouter.rs  token_counter.rs
crates/core/src/memory/: invariant.rs  working_memory.rs
crates/core/src/todo/: lineage.rs  mapping_service.rs  mod.rs
crates/decision/: Cargo.toml
crates/decision/src/: engine.rs  lib.rs  validators.rs
crates/interface/: Cargo.toml  build.rs
crates/interface/protos/: ndc.proto
crates/interface/src/: agent_backend_impl.rs  agent_mode.rs  chat_renderer.rs  cli.rs  cli_tests.rs  daemon.rs  daemon_tests.rs  e2e_tests.rs  grpc.rs  grpc_client.rs  input_handler.rs  interactive.rs  layout_manager.rs  lib.rs  permission_engine.rs  project_index.rs  provider_config.rs  redaction.rs  repl.rs  session_archive.rs
crates/interface/src/tui/: app.rs  chat_renderer.rs  commands.rs  event_renderer.rs  input_handler.rs  layout_manager.rs  mod.rs  scene.rs  test_helpers.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: json.rs  lib.rs  store.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: executor.rs  lib.rs  storage.rs  storage_sqlite.rs  workflow.rs
crates/runtime/src/discovery/: hard_constraints.rs  heatmap.rs  impact_report.rs  mod.rs
crates/runtime/src/documentation/: mod.rs
crates/runtime/src/engine/: mod.rs
crates/runtime/src/execution/: mod.rs
crates/runtime/src/mcp/: mod.rs
crates/runtime/src/mcp/transport/: mod.rs
crates/runtime/src/skill/: executor.rs  mod.rs
crates/runtime/src/tools/: bash_parsing.rs  edit_tool.rs  fs.rs  git.rs  glob_tool.rs  grep_tool.rs  list_tool.rs  locking.rs  lsp.rs  mod.rs  output_truncation.rs  permission.rs  read_tool.rs  registry.rs  schema.rs  security.rs  shell.rs  trait_mod.rs  webfetch.rs  websearch.rs  write_tool.rs
crates/runtime/src/tools/ndc/: memory_query.rs  mod.rs  task_create.rs  task_list.rs  task_update.rs  task_verify.rs
crates/runtime/src/verify/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  sqlite.rs  trait_.rs
crates/tui/: Cargo.toml
crates/tui/src/: agent_backend.rs  app.rs  chat_renderer.rs  commands.rs  event_renderer.rs  input_handler.rs  layout_manager.rs  lib.rs  scene.rs  test_helpers.rs  todo_panel.rs
docs/: E2E_TEST_PLAN.md  ENGINEERING_CONSTRAINTS.md  GRPC_CLIENT.md  LLM_INTEGRATION.md  README.md  TODO.md  USER_GUIDE.md  config.yaml  devman-feature-requests.md  devman-integration-plan.md  issues.md
docs/design/: 2026-02-04-ndc-final-design.md  README.md  p0-d-security-project-session.md  p0-d6-non-interactive-migration.md  p1-repl-ux-redesign.md  p1-scene-adaptive-tui.md  p1-tui-crate-extraction.md  p1-workflow-todo-driven.md  sec-s2-pipeline-gap-analysis.md
docs/plan/: README.md  current_plan.md
docs/plan/archive/: COMPLETED_MILESTONES.md  E2E_TEST_PLAN_V2.md  NDC_AGENT_INTEGRATION_PLAN.md
docs/plans/: 2026-02-04-devman-integration-design.md
