[package]
name = "ndc-cognition"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jerry"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# ID generation
ulid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Core types
ndc-core = { path = "../core" }
ndc-persistence = { path = "../persistence" }

# Embedding (for vector search)
# 使用轻量级 embedding，避免重型依赖
candle-core = { version = "0.4", optional = true }

# LRU Cache
lru = { version = "0.12" }

# Similarity calculation
simhash = { version = "3" }

[features]
default = ["simhash"]
vector-search = ["candle-core"]
