[package]
name = "ndc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2"
tracing = { workspace = true }
futures-util = "0.3"
