[package]
name = "ndc-interface"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jerry"]

[build-dependencies]
tonic-build = "0.12"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"

# Progress bars
indicatif = "0.17"

# Async utilities
tokio-stream = "0.1"

# Time
chrono = "0.4"

# ID generation
ulid = "1"

# Core types
ndc-core = { path = "../core" }
ndc-decision = { path = "../decision" }
ndc-runtime = { path = "../runtime" }

# gRPC (optional)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[features]
default = []
grpc = ["tonic", "prost"]

[dev-dependencies]
tempfile = "3"
