[package]
name = "ndc-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jerry"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs", "process"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# ID generation
ulid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.18"

# Core types
ndc-core = { path = "../core" }
ndc-decision = { path = "../decision" }

# SHA256 for checksums
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
