[package]
name = "ndc-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jerry"]

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs", "process"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
glob = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# ID generation
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Core types
ndc-core = { path = "../core" }
ndc-decision = { path = "../decision" }

# SQLite (optional)
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
