[package]
name = "ndc-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sqlite = ["ndc-storage/sqlite"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs", "process"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
glob = "0.3"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# ID generation
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Core types
ndc-core = { path = "../core" }
ndc-decision = { path = "../decision" }
ndc-storage = { path = "../storage" }

# Utilities
tempfile = "3"

# HTTP client for web tools
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2"

# MCP & Skills
serde_yaml = "0.9"
dirs = "5"

[dev-dependencies]
tempfile = "3"
