[package]
name = "ndc-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
sqlite = ["rusqlite", "r2d2"]

[dependencies]
ndc-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

# SQLite (optional)
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
r2d2 = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
