[package]
name = "ndc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ndc-core = { path = "../core" }
ratatui = "0.29"
crossterm = "0.29"
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
